<!--
  ~ Created by Longphi Nguyen on 12/11/18 8:25 PM.
  ~ Copyright (c) 2018. All rights reserved.
  ~ Last modified 12/8/18 10:30 AM.
  -->

<resources>
    <string name="app_name">Workout Logger</string>
    <string name="text_save">Save</string>
    <string name="text_cancel">Cancel</string>

    <string name="requiredFieldsMissing">Required fields missing.</string>

    <string name="Name">Name</string>
    <string name="Description">Description</string>
    <string name="ConfirmAdd">Add Selection to Routine</string>

    <string name="AddSet">Add Set</string>
    <string name="ClearSelection">Clear Selection</string>
    <string name="Number_1">1</string>
    <string name="Number_2">2</string>
    <string name="Number_3">3</string>
    <string name="Cancel_X">X</string>
    <string name="Number_7">7</string>
    <string name="Number_8">8</string>
    <string name="Number_9">9</string>
    <string name="Number_4">4</string>
    <string name="Number_5">5</string>
    <string name="Number_6">6</string>
    <string name="Time_timeString">%1$01d:%2$02d</string>
    <string name="Time_timeStringUnformatted">%1$d%2$02d</string>
    <string name="Number_0">0</string>
    <string name="text_rest">Rest:</string>
    <string name="set_header">Rest: %1$01d:%2$02d</string>

    <!-- Bottom navigation bar text -->
    <string name="NavBar_Profile">Profile</string>
    <string name="NavBar_Exercises">Exercises</string>
    <string name="NavBar_Workout">Workouts</string>
    <!-- Toolbar title for fragments/activities -->
    <string name="Toolbar_Routines">Routines</string>
    <string name="Toolbar_RoutineCreate">Create Routine</string>
    <string name="Toolbar_RoutineEdit">Edit Routine</string>
    <string name="Toolbar_Exercises">Exercises</string>
    <string name="Toolbar_ExerciseCreate">Create Exercise</string>
    <string name="Toolbar_ExerciseEdit">Edit Exercise: %1$s</string>
    <string name="Toolbar_PerformExercise">Perform %1$s</string>

    <string name="ComingSoon">Coming Soon</string>
    <string name="Perform">Perform</string>
    <string name="Reps">Reps:</string>
    <string name="Weight">Weight:</string>

    <string name="Assisted">Assisted</string>
    <string name="Next">Next</string>
    <string name="zeroDouble">0</string>
    <string name="zeroInt">0</string>

    <!-- Notification title when rest timer is up -->
    <string name="notificationChannelDescription">Rest for %1$01d:%2$02d</string>

    <!-- Names for muscle groups -->
    <string name="MUSCLEGROUP_chest">Chest</string>
    <string name="MUSCLEGROUP_back">Back</string>
    <string name="MUSCLEGROUP_arms">Arms</string>
    <string name="MUSCLEGROUP_shoulders">Shoulders</string>
    <string name="MUSCLEGROUP_legs">Legs</string>
    <string name="MUSCLEGROUP_core">Core</string>
    <string name="MUSCLEGROUP_misc">Miscellaneous</string>

    <!-- Names for muscles -->
    <string name="MUSCLE_traps">Traps</string>
    <string name="MUSCLE_rhomboids">Rhomboids</string>
    <string name="MUSCLE_lats">Lats</string>
    <string name="MUSCLE_lower_back">Lower Back</string>
    <string name="MUSCLE_biceps">Biceps</string>
    <string name="MUSCLE_bicep_brachialis">Bicep Brachialis</string>
    <string name="MUSCLE_triceps">Triceps</string>
    <string name="MUSCLE_forearms">Forearms</string>
    <string name="MUSCLE_deltoid_anterior">Anterior Deltoid</string>
    <string name="MUSCLE_deltoid_lateral">Lateral Deltoid</string>
    <string name="MUSCLE_deltoid_posterior">Posterior Deltoid</string>
    <string name="MUSCLE_quads">Quads</string>
    <string name="MUSCLE_hamstrings">Hamstrings</string>
    <string name="MUSCLE_glutes">Glutes</string>
    <string name="MUSCLE_calves">Calves</string>
    <string name="MUSCLE_hip_adductors">Hip Adductors</string>
    <string name="MUSCLE_hip_abductors">Hip Abductors</string>
    <string name="MUSCLE_abs">Abs</string>
    <string name="MUSCLE_obliques">Obliques</string>
    <string name="MUSCLE_pec_upper">Upper Pecs</string>
    <string name="MUSCLE_pec_middle">Middle Pecs</string>
    <string name="MUSCLE_pec_lower">Lower Pecs</string>
    <string name="MUSCLE_serratus">Serratus</string>
    <string name="MUSCLE_cardio">Cardio</string>
    <string name="MUSCLE_stretch">Stretch</string>

    <!-- Options for exercise types -->
    <string name="EXERCISETYPE_weight_and_rep">Weight and Reps</string>
    <string name="EXERCISETYPE_reps">Reps</string>
    <string name="EXERCISETYPE_distance_and_time">Distance and Time</string>
    <string name="EXERCISETYPE_duration">Duration</string>
    <string name="EXERCISETYPE_countdown">Countdown</string>

    <!-- Weight types -->
    <string name="WEIGHTUNIT_lbs">Lbs</string>
    <string name="WEIGHTUNIT_kbs">Kgs</string>

    <!-- Options for grouping exercise list -->
    <string name="GROUPBY_NAME">A-Z</string>
    <string name="GROUPBY_PREFIX"></string>

    <!-- List of weight unit options [TODO} remove, this is no longer used-->
    <string-array name="units_array">
        <item>lbs</item>
        <item>kgs</item>
    </string-array>

    <string name="Edit">Edit</string>
    <string name="Delete">Delete</string>
    <string name="addExercise">Add Exercise</string>
    <string name="AddExerciseToRoutine">Add to Routine</string>
    <string name="WorkoutExerciseDescription">Sets: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="AddRoutine">Add Routine</string>
    <string name="addWorkout">Add Workout</string>
    <string name="NavBar_Workouts">Workouts</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>
    <string name="Or">or</string>
    <string name="Every">Every</string>
    <string name="days">days</string>
    <string name="ScheduleWeekday">Weekday</string>
    <string name="ScheduleXDays">Frequency</string>
    <string name="ScheduleNone">None</string>

    <!-- Set types-->
    <string name="Warmup">Warmup</string>
    <string name="Regular">Regular</string>
    <string name="ToFailure">To Failure</string>
    <string name="title_activity_test">TestActivity</string>
</resources>
