<!--
  ~ Created by Longphi Nguyen on 12/11/18 8:25 PM.
  ~ Copyright (c) 2018. All rights reserved.
  ~ Last modified 11/4/18 4:55 PM.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="4dp"
    tools:context=".view.Exercises.PerformExercise.PerformSetDialog">

    <TextView
        android:id="@+id/txt_perform_exercise_weightsHeader"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:text="@string/Weight"
        android:textAlignment="center"
        android:textSize="@dimen/header_large" />

    <TextView
        android:id="@+id/txt_perform_exercise_weights"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txt_perform_exercise_restHeader"
        android:background="@drawable/back_border_lightblue"
        android:textAlignment="center"
        android:textSize="@dimen/header_large"
        tools:text="45" />

    <!--
    <TextView
        android:id="@+id/txt_perform_exercise_units"
        android:layout_width="51dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_perform_exercise_restHeader"
        android:layout_toEndOf="@+id/txt_perform_exercise_weights"
        android:background="@drawable/back_border_grey"
        android:text="lbs"
        android:textAlignment="center"
        android:textSize="@dimen/header_large" />
    -->

    <Spinner
        android:id="@+id/spinner_perform_exercise_units"
        android:layout_width="51dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_perform_exercise_restHeader"
        android:layout_toEndOf="@+id/txt_perform_exercise_weights"
        android:background="@drawable/back_border_grey"
        android:entries="@array/units_array"
        android:textAlignment="center"
        android:textSize="@dimen/header_large"
        tools:listitem="@layout/weight_unit_spinner_item"
        tools:text="lbs" />

    <TextView
        android:id="@+id/txt_perform_exercise_repsHeader"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/txt_perform_exercise_multiplier"
        android:background="@android:color/darker_gray"
        android:text="@string/Reps"
        android:textAlignment="center"
        android:textSize="@dimen/header_large" />

    <TextView
        android:id="@+id/txt_perform_exercise_reps"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_perform_exercise_restHeader"
        android:layout_toEndOf="@+id/txt_perform_exercise_multiplier"
        android:background="@drawable/back_border_grey"
        android:textAlignment="center"
        android:textSize="@dimen/header_large"
        tools:text="9" />

    <TextView
        android:id="@+id/txt_perform_exercise_multiplier"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_perform_exercise_restHeader"
        android:layout_toEndOf="@+id/spinner_perform_exercise_units"
        android:text="@string/Cancel_X"
        android:textAlignment="center"
        android:textSize="@dimen/header_large" />

    <TextView
        android:id="@+id/txt_perform_exercise_restHeader"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/txt_perform_exercise_repsHeader"
        android:background="@android:color/darker_gray"
        android:text="@string/text_rest"
        android:textAlignment="center"
        android:textSize="@dimen/header_large" />

    <TextView
        android:id="@+id/txt_perform_exercise_rest"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/txt_perform_exercise_restHeader"
        android:layout_toEndOf="@+id/txt_perform_exercise_reps"
        android:background="@drawable/back_border_grey"
        android:textAlignment="center"
        android:textSize="@dimen/header_large"
        tools:text="0:00" />


    <include
        layout="@layout/fragment_keyboard_numbers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_perform_exercise_rest" />
</RelativeLayout>
